[package]
name = "libui-sys"
version = "0.1.9"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

description = "Low-level rust bindings for libui"
license = "MIT"

[dependencies]

[build-dependencies]
bindgen = "> 0.49, < 1"
embed-resource = "1.3"
pkg-config = "0.3"
find-winsdk = "0.2"

[features]
static = []
